// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Button renders correctly with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Click me",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Click me",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders primary variant 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Primary",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Primary",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders secondary variant 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Secondary",
              ],
              "props": {
                "style": {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Secondary",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#2B6072",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders muted variant 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Muted",
              ],
              "props": {
                "style": {
                  "color": "#353535",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Muted",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#B6CDD5",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders outline variant 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Outline",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Outline",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#092E3A",
      "borderRadius": 360,
      "borderWidth": 2,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 18,
      "paddingVertical": 6,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders destructive variant 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Delete",
              ],
              "props": {
                "style": {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Delete",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#BD1111",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders disabled state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Disabled",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Disabled",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": true,
    },
    "disabled": true,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#949494",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "Pressable",
}
`;

exports[`Button applies disabled styles when disabled 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Disabled",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Disabled",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": true,
    },
    "disabled": true,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#949494",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "Pressable",
}
`;

exports[`Button renders loading state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Loading",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "color": "#092E3A",
                "size": "small",
              },
              "type": "ActivityIndicator",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginLeft": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Loading",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": true,
    },
    "disabled": true,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "Pressable",
}
`;

exports[`Button renders fullWidth button 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Full Width",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Full Width",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders with icon on left 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "alignSelf": "center",
                  "marginLeft": 0,
                  "marginRight": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "With Icon",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "With Icon",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders with icon on right 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "alignSelf": "center",
                  "marginLeft": 8,
                  "marginRight": 0,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Next",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row-reverse",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Next",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders with confirmation modal props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Delete",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Opens a confirmation dialog",
    "accessibilityLabel": "Delete",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders with tooltip on desktop (wrapped in Tooltip) 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Hover me",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Hover me",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button renders with custom confirmationText and modalSubTitle 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Confirm Btn",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Opens a confirmation dialog",
    "accessibilityLabel": "Confirm Btn",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;

exports[`Button shows loading indicator when loading prop is true 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Loading",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "color": "#092E3A",
                "size": "small",
              },
              "type": "ActivityIndicator",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginLeft": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Loading",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": true,
    },
    "disabled": true,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0E9DCD",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "Pressable",
}
`;

exports[`Button renders ghost variant with correct styles 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Ghost",
              ],
              "props": {
                "style": {
                  "color": "#2B6072",
                  "fontSize": 16,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "accessibilityHint": "Press to perform action",
    "accessibilityLabel": "Ghost",
    "accessibilityRole": "button",
    "accessibilityState": {
      "disabled": false,
    },
    "disabled": false,
    "onPress": [Function: debounced],
    "style": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderColor": undefined,
      "borderRadius": 360,
      "borderWidth": undefined,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "width": "auto",
    },
    "testID": undefined,
  },
  "type": "PressableScale",
}
`;
